# obelisk-render-static

./: obelisk-render-static.cabal  obelisk-render-static.cabal~  render-static.cabal~
src/: main.hs
